<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">


    <TextView
        android:id="@+id/Module1Display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/c390_portfolio_development" />

    <TextView
        android:id="@+id/Module2Display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/c203_web_appin_development_in_php" />

    <TextView
        android:id="@+id/Module3Display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/c206_software_development_process" />

    <TextView
        android:id="@+id/Module4Display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/c218_ui_ux_design_for_apps" />

    <TextView
        android:id="@+id/Module5Display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/c235_it_security_and_management" />

    <TextView
        android:id="@+id/Module6Display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/c346_mobile_app_development" />

    <TextView
        android:id="@+id/Module7Display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/g953_life_skills_iii" />

</LinearLayout>
